--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "esbuild": "^0.14.12",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.1",
+    "react-bootstrap-icons": "^1.7.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1"
   }
