--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "./node_modules/.bin/esbuild src/index.tsx --minify --bundle --outfile=static/bundle.js",
+    "build": "./node_modules/.bin/esbuild src/index.tsx --bundle --outfile=static/bundle.js",
+    "build-prod": "npm run build --- --minify",
     "build-watch": "npm run build -- --watch",
-    "start": "npm run build && npx http-server"
+    "start": "npm run build-prod && npx http-server"
   },
   "author": "Benjamin Kaiser",
   "license": "MIT",
