--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "MIT",
   "dependencies": {
     "bootstrap": "^5.1.3",
+    "bs5-toast": "^1.0.0",
     "esbuild": "^0.14.12",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.1",
