--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "apexcharts": "^3.33.1",
     "bootstrap": "^5.1.3",
     "bs5-toast": "^1.0.0",
+    "dayjs": "^1.11.1",
     "esbuild": "^0.14.12",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
